# spio

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  design.md  readtest.c
benchmark/: CMakeLists.txt  bench_main.cpp  bench_print.cpp
include/spio/: CMakeLists.txt  afio_device.h  config.h  container_device.h  device.h  device_stream.h  error.h  filter.h  formatter.h  llfio_device.h  memory_device.h  owned_device.h  result.h  ring.h  scanner.h  sink.h  source.h  spio.h  stdio_device.h  stream.h  stream_base.h  stream_operations.h  stream_ref.h  string_view.h  util.h
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  doctest.h  empty.cpp  filter.cpp  print.cpp  ring.cpp  scanner.cpp  sink_buffer.cpp  source_buffer.cpp  stdio_device.cpp  stream_ref.cpp  test.cpp
